<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_deposit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.atd.anddevclassproj.depositActivity"
    tools:showIn="@layout/activity_deposit">

    <Button
        android:text="Send Deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSendDeposit"
        android:id="@+id/btnDeposit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/gallery_thumb"
        android:id="@+id/ivSelectedPic"
        android:layout_above="@+id/btnSelectPic"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Select Picture From Gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSelectPictureFromGallery"
        android:id="@+id/btnSelectPic"
        android:layout_marginBottom="106dp"
        android:layout_above="@+id/btnDeposit"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:text="Take Picture with Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSelectedPic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:onClick="onClickTakePic"
        android:id="@+id/btnTakePic" />
</RelativeLayout>
